# TheArcanaEngine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  shaders.hlsl  skills.md
.github/workflows/: cmake-single-platform.yml
assets/misc/: Logo.xcf
scenes/: TestScene.json
shaders/: CMakeLists.txt  frag.spv  shader.frag  shader.vert  vert.spv
shaders/glsl/: BlinnPhong.frag  BlinnPhong.vert  Common.glsl  Geometry.glsl  PTIteration.comp  PathTracer.frag  PathTracerImpl.glsl  ScreenPost.frag  ScreenPost.vert  Test.comp
shaders/hlsl/: BlinnPhong.hlsl  Light.hlsl  Numeric.hlsli  PBR.hlsl  PBRCommon.hlsli  PBRFrag.hlsl  PBRLighting.hlsl  PBRVert.hlsl  ScreenPost.hlsl
src/application/: application.cpp
src/application/CoreGeometry/: CMakeLists.txt
src/application/CoreGeometry/Private/: CoreGeometry.cpp
src/application/CoreGeometry/Public/: CoreGeometry.h
src/application/CoreLog/: CMakeLists.txt
src/application/CoreLog/Public/: CoreLog.inl
src/application/CoreMath/: CMakeLists.txt
src/application/CoreMath/Public/: CoreMath.inl
src/application/CoreScene/: CMakeLists.txt
src/application/CoreScene/Private/: CoreScene.cpp
src/application/CoreScene/Public/: CoreScene.h
src/application/Engine/: CMakeLists.txt
src/application/Engine/Private/: Engine.cpp
src/application/Engine/Public/: Engine.h
src/application/RHI/: CMakeLists.txt
src/application/RHI/Private/: RHI.cpp  RHID3D12.cpp  RHID3D12.h  RHID3D12Impl.cpp  RHID3D12Impl.h  RHIDirect3D12.cpp  RHIDirect3D12Impl.cpp  RHIVulkan.cpp  RHIVulkan.h  RHIVulkanImpl.cpp  RHIVulkanImpl.h  RHIWindowExtension.cpp  RHIWindowExtension.h
src/application/RHI/Private/Vulkan/: RHIVulkan.cpp  RHIVulkan.h  RHIVulkanGraphics.cpp  RHIVulkanImpl.cpp  RHIVulkanImpl.h  RHIVulkanResource.cpp
src/application/RHI/Public/: RHI.h  RHIDirect3D12.h  RHIImGuiHelper.h  RHIVulkan.h
src/application/Renderer/: CMakeLists.txt
src/application/Renderer/Private/: BaseRenderer.cpp  BlinnPhongRenderer.cpp  PBRRenderer.cpp  PathTraceRenderer.cpp  Renderer.cpp
src/application/Renderer/Public/: BaseRenderer.h  BlinnPhongRenderer.h  PBRRenderer.h  PathTraceRenderer.h  Renderer.h
src/application/SDF/: CMakeLists.txt
src/application/SDF/Private/: SDF.cpp
src/application/SDF/Public/: SDF.h
src/application/ShaderCompiler/: CMakeLists.txt
src/application/ShaderCompiler/Private/: ShaderCompiler.cpp
src/application/ShaderCompiler/Public/: ShaderCompiler.h
src/thirdparties/: .gitignore  CMakeLists.txt
src/thirdparties/DirectX-Headers-1.615.0/: CMakeLists.txt
src/thirdparties/dxc_2025_02_20/: DXC_downloader.bat  Instructions.md  Notes.md
src/thirdparties/glfw-3.4/: CMakeLists.txt
src/thirdparties/glm-1.0.1/: CMakeLists.txt
src/thirdparties/imgui-1.91.8/: CMakeLists.txt
src/thirdparties/nlohmann_json-3.11.3/: CMakeLists.txt
src/thirdparties/stb_image-2.30/: CMakeLists.txt
src/thirdparties/tinyobjloader-1.0.6/: CMakeLists.txt
